<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ic_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24_black"
        android:title="@string/home" />
    <item
        android:id="@+id/ic_search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/explore"
        />
    <item
        android:id="@+id/ic_notificactions"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notifications"
        />
    <item
        android:id="@+id/ic_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        />
</menu>