<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673" />


    <Button
        android:id="@+id/aceptar_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30sp"
        android:layout_marginBottom="124dp"
        android:text="@string/acept"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="212dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/edit_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <EditText
        android:id="@+id/edit_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginBottom="24dp"
        android:hint="@string/mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/edit_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginBottom="24dp"
        android:hint="@string/contact_example"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/edit_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_bio"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="30sp"
        android:layout_marginBottom="24dp"
        android:hint="@string/bio_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/profession_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/profession_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/aceptar_btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/profession"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/aceptar_btn"
        app:layout_constraintEnd_toStartOf="@+id/profession_spinner"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>